--- a/Sanjay Project/Base.lproj/Main.storyboard
+++ b/Sanjay Project/Base.lproj/Main.storyboard
@@ -106,14 +106,16 @@ EEVudGVyIExhc3QgTmFtZQ
         <!--Home Page-->
         <scene sceneID="Ohx-zz-wcQ">
             <objects>
-                <viewController id="W0A-fh-oPd" customClass="HomePage" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="W0A-fh-oPd" customClass="HomePage" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gRw-3I-6HG">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="X8p-9o-eba">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="X8p-9o-eba">
+                                <rect key="frame" x="0.0" y="70" width="393" height="782"/>
+                                <color key="backgroundColor" red="1" green="0.99898352209999997" blue="0.59028942409999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="separatorColor" systemColor="systemRedColor"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell1" rowHeight="136" id="ElM-Pj-GsH" customClass="HomeItemCell" customModule="Sanjay_Project" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="136"/>
@@ -177,19 +179,56 @@ EEVudGVyIExhc3QgTmFtZQ
                                     <outlet property="delegate" destination="W0A-fh-oPd" id="Ias-U3-8X2"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pjk-vZ-Kt1">
+                                <rect key="frame" x="0.0" y="20" width="393" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ELq-xI-YZ6">
+                                        <rect key="frame" x="-5" y="7.6666666666666679" width="51" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="1YQ-fh-Z40"/>
+                                            <constraint firstAttribute="width" constant="51" id="Xrv-RA-Z6N"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="arrowshape.backward.fill" catalog="system"/>
+                                        <connections>
+                                            <action selector="actionBackPress:" destination="W0A-fh-oPd" eventType="touchUpInside" id="XjK-Yv-uuD"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzz-5l-RxU">
+                                        <rect key="frame" x="132.66666666666666" y="18" width="127.99999999999997" height="34"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Select Student">
+                                            <color key="titleColor" systemColor="labelColor"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstItem="ELq-xI-YZ6" firstAttribute="leading" secondItem="pjk-vZ-Kt1" secondAttribute="leading" constant="-5" id="PnY-AZ-UQU"/>
+                                    <constraint firstItem="hzz-5l-RxU" firstAttribute="centerX" secondItem="pjk-vZ-Kt1" secondAttribute="centerX" id="Xco-9r-T7k"/>
+                                    <constraint firstItem="ELq-xI-YZ6" firstAttribute="centerY" secondItem="pjk-vZ-Kt1" secondAttribute="centerY" id="ahN-cw-dJY"/>
+                                    <constraint firstAttribute="height" constant="50" id="cLo-xd-aSh"/>
+                                    <constraint firstItem="hzz-5l-RxU" firstAttribute="centerY" secondItem="pjk-vZ-Kt1" secondAttribute="centerY" constant="10" id="l6W-fu-U6C"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4Cl-CB-nBA"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                         <constraints>
-                            <constraint firstItem="X8p-9o-eba" firstAttribute="top" secondItem="4Cl-CB-nBA" secondAttribute="top" id="8aX-wQ-bdM"/>
+                            <constraint firstItem="pjk-vZ-Kt1" firstAttribute="leading" secondItem="4Cl-CB-nBA" secondAttribute="leading" id="2Tu-Pm-HZo"/>
+                            <constraint firstItem="X8p-9o-eba" firstAttribute="top" secondItem="pjk-vZ-Kt1" secondAttribute="bottom" id="5Yw-dP-8lW"/>
                             <constraint firstItem="4Cl-CB-nBA" firstAttribute="trailing" secondItem="X8p-9o-eba" secondAttribute="trailing" id="CQx-mR-OE5"/>
                             <constraint firstItem="X8p-9o-eba" firstAttribute="leading" secondItem="4Cl-CB-nBA" secondAttribute="leading" id="EjO-S0-zux"/>
                             <constraint firstItem="4Cl-CB-nBA" firstAttribute="bottom" secondItem="X8p-9o-eba" secondAttribute="bottom" id="Pgu-fq-FDO"/>
+                            <constraint firstItem="pjk-vZ-Kt1" firstAttribute="top" secondItem="4Cl-CB-nBA" secondAttribute="top" constant="20" id="rla-tj-g2o"/>
+                            <constraint firstItem="4Cl-CB-nBA" firstAttribute="trailing" secondItem="pjk-vZ-Kt1" secondAttribute="trailing" id="thv-ob-jsZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="XnM-xB-cWi"/>
                     <connections>
-                        <outlet property="tableView" destination="X8p-9o-eba" id="veq-2v-vmr"/>
+                        <outlet property="btnHeading" destination="hzz-5l-RxU" id="c7Q-JY-3Fi"/>
+                        <outlet property="tableView" destination="X8p-9o-eba" id="b3K-9e-yTl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3u5-d2-4Sp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -229,12 +268,19 @@ EEVudGVyIExhc3QgTmFtZQ
         </scene>
     </scenes>
     <resources>
+        <image name="arrowshape.backward.fill" catalog="system" width="128" height="104"/>
         <image name="arrowshape.right" catalog="system" width="128" height="104"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
