--- a/Sanjay Project/Base.lproj/Main.storyboard
+++ b/Sanjay Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fDE-uT-Xa7">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -234,6 +234,40 @@ EEVudGVyIExhc3QgTmFtZQ
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3u5-d2-4Sp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1009.9236641221373" y="7.746478873239437"/>
+        </scene>
+        <!--Table Xib Wala-->
+        <scene sceneID="Nq4-gp-E3e">
+            <objects>
+                <viewController id="fDE-uT-Xa7" customClass="TableXibWala" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6Th-De-75M">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4xp-uW-YNS">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="fDE-uT-Xa7" id="mjt-Bc-TxM"/>
+                                    <outlet property="delegate" destination="fDE-uT-Xa7" id="zEQ-pX-lZd"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fml-Zw-1YQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fml-Zw-1YQ" firstAttribute="trailing" secondItem="4xp-uW-YNS" secondAttribute="trailing" id="HNa-jp-Zhh"/>
+                            <constraint firstItem="4xp-uW-YNS" firstAttribute="top" secondItem="fml-Zw-1YQ" secondAttribute="top" id="IGR-Gq-cwv"/>
+                            <constraint firstItem="4xp-uW-YNS" firstAttribute="leading" secondItem="fml-Zw-1YQ" secondAttribute="leading" id="YKo-BO-K3l"/>
+                            <constraint firstItem="fml-Zw-1YQ" firstAttribute="bottom" secondItem="4xp-uW-YNS" secondAttribute="bottom" id="i5R-MD-ZiC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="4xp-uW-YNS" id="6q1-Od-zm5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vrL-NJ-lcX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1840" y="8"/>
         </scene>
         <!--LogoutVC-->
         <scene sceneID="c5L-q2-ccL">
