--- a/Sanjay Project/Base.lproj/Main.storyboard
+++ b/Sanjay Project/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -113,7 +114,7 @@ EEVudGVyIExhc3QgTmFtZQ
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="X8p-9o-eba">
                                 <rect key="frame" x="0.0" y="70" width="393" height="782"/>
-                                <color key="backgroundColor" red="1" green="0.99898352209999997" blue="0.59028942409999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" systemColor="systemRedColor"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -130,7 +131,7 @@ EEVudGVyIExhc3QgTmFtZQ
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5s-B3-Tdy">
                                                             <rect key="frame" x="120" y="47.666666666666664" width="177" height="20.999999999999993"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" name="commonLabelColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jb5-QN-451">
@@ -142,6 +143,7 @@ EEVudGVyIExhc3QgTmFtZQ
                                                         </imageView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowshape.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LZk-2X-VWp">
                                                             <rect key="frame" x="317" y="44.666666666666664" width="30" height="26.999999999999993"/>
+                                                            <color key="tintColor" red="1" green="0.41075528779999998" blue="0.052282150100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="30" id="6hT-Uh-FAp"/>
                                                                 <constraint firstAttribute="height" constant="30" id="ddY-XK-JZ1"/>
@@ -214,7 +216,7 @@ EEVudGVyIExhc3QgTmFtZQ
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4Cl-CB-nBA"/>
-                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <color key="backgroundColor" name="commonBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="pjk-vZ-Kt1" firstAttribute="leading" secondItem="4Cl-CB-nBA" secondAttribute="leading" id="2Tu-Pm-HZo"/>
                             <constraint firstItem="X8p-9o-eba" firstAttribute="top" secondItem="pjk-vZ-Kt1" secondAttribute="bottom" id="5Yw-dP-8lW"/>
@@ -263,11 +265,28 @@ EEVudGVyIExhc3QgTmFtZQ
                     </view>
                     <connections>
                         <outlet property="tableView" destination="4xp-uW-YNS" id="6q1-Od-zm5"/>
+                        <segue destination="Xcy-e4-u1P" kind="show" identifier="passDataUsingSegue" id="Eqr-Gz-JeW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vrL-NJ-lcX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1840" y="8"/>
+        </scene>
+        <!--Home2VC-->
+        <scene sceneID="0xT-ce-tHo">
+            <objects>
+                <viewController id="Xcy-e4-u1P" customClass="Home2VC" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PUb-XC-eat">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="cbK-8w-ASX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="R0P-lI-Rx0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RnI-3S-UFG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2633" y="20"/>
         </scene>
         <!--LogoutVC-->
         <scene sceneID="c5L-q2-ccL">
@@ -304,6 +323,12 @@ EEVudGVyIExhc3QgTmFtZQ
     <resources>
         <image name="arrowshape.backward.fill" catalog="system" width="128" height="104"/>
         <image name="arrowshape.right" catalog="system" width="128" height="104"/>
+        <namedColor name="commonBackgroundColor">
+            <color red="0.86500000953674316" green="1" blue="0.83300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="commonLabelColor">
+            <color red="0.0" green="0.37799999117851257" blue="0.78299999237060547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
