--- a/Sanjay Project/Base.lproj/Main.storyboard
+++ b/Sanjay Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fDE-uT-Xa7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jm6-Y0-ZXf">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -288,6 +288,72 @@ EEVudGVyIExhc3QgTmFtZQ
             </objects>
             <point key="canvasLocation" x="2633" y="20"/>
         </scene>
+        <!--LifecycleVC-->
+        <scene sceneID="8S3-FC-FHL">
+            <objects>
+                <viewController id="Jm6-Y0-ZXf" customClass="LifecycleVC" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bhi-T9-ovg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ApY-VT-t1v">
+                                <rect key="frame" x="159" y="405.66666666666669" width="75" height="41"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <segue destination="0ZW-Ug-UYW" kind="show" id="G6Z-er-Fye"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ck-XT-18S">
+                                <rect key="frame" x="164" y="479" width="65" height="41"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="finish"/>
+                                <connections>
+                                    <action selector="actionClose:" destination="Jm6-Y0-ZXf" eventType="touchUpInside" id="wAt-TB-IYr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="DVq-2C-vvM"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6ck-XT-18S" firstAttribute="top" secondItem="ApY-VT-t1v" secondAttribute="bottom" constant="32.333333333333314" id="2Ee-UW-d6m"/>
+                            <constraint firstItem="ApY-VT-t1v" firstAttribute="centerY" secondItem="Bhi-T9-ovg" secondAttribute="centerY" id="6Pq-SI-Iee"/>
+                            <constraint firstItem="6ck-XT-18S" firstAttribute="centerX" secondItem="ApY-VT-t1v" secondAttribute="centerX" id="pGf-Uz-UX1"/>
+                            <constraint firstItem="ApY-VT-t1v" firstAttribute="centerX" secondItem="Bhi-T9-ovg" secondAttribute="centerX" id="x8L-vV-7rG"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zna-gM-Hx8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3595" y="-9"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="Xta-Bt-LBV">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="0ZW-Ug-UYW" customClass="SecondViewController" customModule="Sanjay_Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gh8-lF-Tku">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kve-ap-sbb">
+                                <rect key="frame" x="164" y="406" width="65" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="finish"/>
+                                <connections>
+                                    <action selector="actionClose:" destination="0ZW-Ug-UYW" eventType="touchUpInside" id="LKh-Gg-gAM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="WnO-vW-PC2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="t0N-bC-i0V"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J5Y-9F-crk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4390" y="-4"/>
+        </scene>
         <!--LogoutVC-->
         <scene sceneID="c5L-q2-ccL">
             <objects>
@@ -336,7 +402,7 @@ EEVudGVyIExhc3QgTmFtZQ
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
